# mc-fly-away

./: .devenv.flake.nix  .envrc.license  .gitignore  .nix.license  .pre-commit-config.yaml  Cargo.lock.license  Cargo.toml  default.nix  devenv.nix  flake.lock.license  flake.nix  mc-fly-away.nix
.github/: dependabot.yml
.github/workflows/: ci-tests-nix.yml  ci-tests.yml  clean-old-workflow-runs.yml  verify-pr-commit.yml  verify-reuse-compliance.yml
.reuse/: dep5
src/: cloud_providers.rs  main.rs
src/cloud_providers/: mod.rs
src/minecraft/: handlers.rs  mod.rs
