# SPDX-FileCopyrightText: 2023 Dom Rodriguez (shymega) <shymega+mc-fly-away@shymega.org.uk>
#
# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "mc-fly-away"
version = "0.1.0"
edition = "2021"

[features]
default = []
fly-io = [] # TODO: Find Fly.io SDK.
aws = ["aws-sdk-ecs"]
azure = ["azure-sdk-rust"] # TODO: Find *maintained* alternative. Disabled by default for now.
gcp = ["gcloud-sdk"]

[dependencies]
anyhow = "1.0.86"
byteorder = "1.5.0"
bytes = { version = "1.7.1", features = ["serde"] }
config = { version = "0.14.0", default-features = false, features = ["json", "toml"] }
env_logger = "0.11.5"
log = { version = "0.4.22", features = ["serde"] }
ozelot = "0.9.0"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
aws-sdk-ecs = { version = "1.42.0", optional = true }
azure-sdk-rust = { version = "0.1.2", optional = true } # TODO: Find *maintained* alternative.
gcloud-sdk = { version = "0.25.5", optional = true }
